init memberships site, backend admin setup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
 <!--    <link href="frontend/src/index.css" rel="stylesheet">-->
   </head>
-  <body>
+  <body style="margin: 0; padding: 0; height: 100vh; overflow: hidden; background-color: #ece9e9">
     <div id="root"></div>
     <script type="module" src="frontend/src/main.tsx"></script>
   </body>
