--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>My Fitness Space</title>
 <!--    <link href="frontend/src/index.css" rel="stylesheet">-->
   </head>
-  <body style="margin: 0; padding: 0; height: 100vh; overflow: hidden; background-color: #ece9e9">
+  <body>
     <div id="root"></div>
     <script type="module" src="frontend/src/main.tsx"></script>
   </body>
 </html>
+
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    height: 100%;
+    background-color: #ece9e9;
+    overflow-x: hidden;
+  }
+
+  #root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+</style>
